--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4387,5 +4387,29 @@
     "CL_CF_CM_Paired_users": "spárovaní uživatelé",
     "CL_CF_CS_atw_cs_2": "Stisknutím tlačítka Nabídka vstupte do seznamu nabídek.",
     "CL_CF_CS_atw_cs_3": "Vyberte WIFI a poté stisknutím prostředního tlačítka spusťte konfiguraci WIFI. Symbol WLAN nyní začne blikat.",
-    "CL_CF_CM_sun_rain_atw_name": "Tepelné čerpadlo ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Tepelné čerpadlo ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Přidejte další čas, aby vaše jídlo zůstalo teplé.",
+    "CL_DV_OV_continue_fast_cool_desc": "Ochlaďte troubu co nejrychleji.",
+    "CL_DV_OV_continue_reduces_desc": "Snižuje zbývající vlhkost po vaření.",
+    "CL_DV_OV_go_to_extra": "Přejít na extra",
+    "CL_SL_CM_visualization": "Vizualizace",
+    "CL_SL_CM_laundry_usage_report": "Zpráva o používání prádla",
+    "CL_SL_CM_usage_month": "Využití měsíce",
+    "CL_SL_CM_about_usage_month": "O použití měsíce",
+    "CL_SL_CM_about_usage_month_detail": "Zobrazené údaje jsou odhady, nikoli přesná měření. Naše odhady jsou založeny na kontrolovaných testech, takže vaše skutečné výsledky se mohou lišit. Skutečná spotřeba energie závisí na vašem konkrétním prostředí a zvycích.",
+    "CL_SL_CM_drum_cleaning_title": "Čištění bubnu",
+    "CL_SL_CM_drum_cleaning_great_job": "Buben pračky je čistý a odvedli jste skvělou práci!",
+    "CL_SL_CM_drum_cleaning_warning": "Od posledního čištění bubnu byl praný mnohokrát a doporučuje se ho použít k čištění prádla.",
+    "CL_SL_CM_drum_cleaning_about": "O čištění bubnu",
+    "CL_SL_CM_drum_cleaning_about_detail": "Funkce čištění bubnu pračky je samočisticí cyklus určený k odstranění plísní nebo jiných bakterií, které se pravděpodobně nahromadily uvnitř bubnu při běžném používání. Doporučujeme provést čištění bubnu po 30 pracích cyklech.",
+    "CL_SL_CM_data_statistics": "Statistika dat",
+    "CL_SL_CM_data_statistics_about": "O datových statistikách",
+    "CL_SL_CM_data_statistics_about_detail": "„Ostatní“ je součet méně používaných.",
+    "CL_SL_CM_usage_week_about": "O použití týdne",
+    "CL_SL_CM_usage_month_about": "O použití měsíce",
+    "CL_SL_CM_usage_year_about": "O využití roku",
+    "CL_SL_CM_washing_temperature": "Teplota praní",
+    "CL_SL_CM_washing_temperature_detail": "Nižší teploty jsou statisticky energeticky účinnější, takže příště možná budete chtít zkusit nižší teplotu vody.",
+    "add_appliance_connect_wifi_atos": "Připojte se k síti „ConnectLife“ v nastavení Wi-Fi svého smartphonu.\n\nUkončete aplikaci ConnectLife a přejděte do nastavení Wi-Fi smartphonu. Připojte se k síti „ConnectLife“, zadejte heslo „ConnectLife“ a vraťte se do aplikace.",
+    "after_sale_report_failed_desc_new": "Došlo k neočekávané chybě a problém nelze nahlásit."
 }
