--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4387,5 +4387,29 @@
     "CL_CF_CM_Paired_users": "usuarios emparejados",
     "CL_CF_CS_atw_cs_2": "Pulse el botón Menú para entrar en la lista del menú.",
     "CL_CF_CS_atw_cs_3": "Seleccione WIFI y luego presione el botón central para iniciar la configuración de WIFI. El símbolo de WLAN comenzará a parpadear.",
-    "CL_CF_CM_sun_rain_atw_name": "Bomba de calor ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Bomba de calor ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Añade tiempo adicional para mantener la comida caliente.",
+    "CL_DV_OV_continue_fast_cool_desc": "Enfríe el horno lo más rápido posible.",
+    "CL_DV_OV_continue_reduces_desc": "Reduce la humedad restante después de la cocción.",
+    "CL_DV_OV_go_to_extra": "Ir a extras",
+    "CL_SL_CM_visualization": "Visualización",
+    "CL_SL_CM_laundry_usage_report": "Informe de uso de lavandería",
+    "CL_SL_CM_usage_month": "Uso del mes",
+    "CL_SL_CM_about_usage_month": "Sobre el uso del mes",
+    "CL_SL_CM_about_usage_month_detail": "Los datos mostrados son estimaciones, no medidas exactas. Nuestras estimaciones se basan en pruebas controladas, por lo que los resultados reales pueden variar. El uso de energía en el mundo real depende de su entorno y hábitos específicos.",
+    "CL_SL_CM_drum_cleaning_title": "Limpieza de tambores",
+    "CL_SL_CM_drum_cleaning_great_job": "¡El tambor de la lavadora está limpio y hiciste un gran trabajo!",
+    "CL_SL_CM_drum_cleaning_warning": "Se ha lavado muchas veces desde la última limpieza del tambor y se recomienda usarlo para hacer la ropa más limpia.",
+    "CL_SL_CM_drum_cleaning_about": "Acerca de la limpieza del tambor",
+    "CL_SL_CM_drum_cleaning_about_detail": "La función de limpieza del tambor de una lavadora es un ciclo de autolimpieza diseñado para eliminar el moho u otras bacterias que probablemente se hayan acumulado dentro del tambor debido al uso general. Le recomendamos que realice una limpieza del tambor después de 30 ciclos de lavado.",
+    "CL_SL_CM_data_statistics": "Estadísticas de datos",
+    "CL_SL_CM_data_statistics_about": "Acerca de las estadísticas de datos",
+    "CL_SL_CM_data_statistics_about_detail": "“Otros” es la suma de los menos utilizados.",
+    "CL_SL_CM_usage_week_about": "Sobre el uso de la semana",
+    "CL_SL_CM_usage_month_about": "Sobre el uso del mes",
+    "CL_SL_CM_usage_year_about": "Sobre el uso del año",
+    "CL_SL_CM_washing_temperature": "Temperatura de lavado",
+    "CL_SL_CM_washing_temperature_detail": "Las temperaturas más bajas son estadísticamente más eficientes energéticamente, por lo que es posible que la próxima vez quieras probar con una temperatura de agua más baja.",
+    "add_appliance_connect_wifi_atos": "Conéctese a la red \"ConnectLife\" en la configuración Wi-Fi de su teléfono inteligente.\n\nSalga de la aplicación ConnectLife y vaya a la configuración Wi-Fi de su teléfono inteligente. Conéctese a la red \"ConnectLife\", escriba la contraseña \"ConnectLife\" y regrese a la aplicación.",
+    "after_sale_report_failed_desc_new": "Ocurrió un error inesperado y no se pudo informar el problema."
 }
