--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4387,5 +4387,29 @@
     "CL_CF_CM_Paired_users": "paritetut käyttäjät",
     "CL_CF_CS_atw_cs_2": "Siirry valikkoluetteloon painamalla Menu-painiketta.",
     "CL_CF_CS_atw_cs_3": "Valitse WIFI ja paina sitten keskipainiketta aloittaaksesi WIFI-määritys. WLAN-symboli alkaa nyt vilkkua.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW lämpöpumppu"
+    "CL_CF_CM_sun_rain_atw_name": "ATW lämpöpumppu",
+    "CL_DV_OV_continue_keep_warm_desc": "Lisää aikaa pitääksesi ruoan lämpimänä.",
+    "CL_DV_OV_continue_fast_cool_desc": "Jäähdytä uuni mahdollisimman nopeasti.",
+    "CL_DV_OV_continue_reduces_desc": "Vähentää jäljellä olevaa kosteutta kypsennyksen jälkeen.",
+    "CL_DV_OV_go_to_extra": "Mene extrain",
+    "CL_SL_CM_visualization": "Visualisointi",
+    "CL_SL_CM_laundry_usage_report": "Pyykin käyttöraportti",
+    "CL_SL_CM_usage_month": "Kuukauden käyttö",
+    "CL_SL_CM_about_usage_month": "Tietoja kuukauden käytöstä",
+    "CL_SL_CM_about_usage_month_detail": "Näytetyt tiedot ovat arvioita, eivät tarkkoja mittoja. Arviomme perustuvat kontrolloituihin testeihin, joten todelliset tulokset voivat vaihdella. Tosimaailman energiankäyttö riippuu erityisestä ympäristöstäsi ja tavoistasi.",
+    "CL_SL_CM_drum_cleaning_title": "Rummun puhdistus",
+    "CL_SL_CM_drum_cleaning_great_job": "Pesurumpu on puhdas ja teit hienoa työtä!",
+    "CL_SL_CM_drum_cleaning_warning": "Se on pesty monta kertaa edellisen rumpupuhdistuksen jälkeen ja on suositeltavaa käyttää sitä pyykin puhdistamiseen.",
+    "CL_SL_CM_drum_cleaning_about": "Tietoja rummun puhdistuksesta",
+    "CL_SL_CM_drum_cleaning_about_detail": "Pyykinpesukoneen rummun puhdistustoiminto on itsepuhdistusohjelma, joka on suunniteltu poistamaan hometta tai muita bakteereja, jotka ovat todennäköisesti kertyneet rummun sisälle yleisen käytön aikana. Suosittelemme, että puhdistat rummun 30 pesukerran jälkeen.",
+    "CL_SL_CM_data_statistics": "Datatilastot",
+    "CL_SL_CM_data_statistics_about": "Tietoja tilastotiedoista",
+    "CL_SL_CM_data_statistics_about_detail": "\"Muut\" on vähemmän käytettyjen summa.",
+    "CL_SL_CM_usage_week_about": "Tietoja viikon käytöstä",
+    "CL_SL_CM_usage_month_about": "Tietoja kuukauden käytöstä",
+    "CL_SL_CM_usage_year_about": "Tietoja vuoden käytöstä",
+    "CL_SL_CM_washing_temperature": "Pesulämpötila",
+    "CL_SL_CM_washing_temperature_detail": "Matalammat lämpötilat ovat tilastollisesti energiatehokkaampia, joten sinun kannattaa kokeilla alhaisempaa veden lämpötilaa ensi kerralla.",
+    "add_appliance_connect_wifi_atos": "Yhdistä \"ConnectLife\"-verkkoon älypuhelimesi Wi-Fi-asetuksissa.\n\nPoistu ConnectLife-sovelluksesta ja siirry älypuhelimesi Wi-Fi-asetuksiin. Yhdistä \"ConnectLife\"-verkkoon, kirjoita salasana \"ConnectLife\" ja palaa sovellukseen.",
+    "after_sale_report_failed_desc_new": "Tapahtui odottamaton virhe, eikä ongelmaa voitu ilmoittaa."
 }
