--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4387,5 +4387,29 @@
     "CL_CF_CM_Paired_users": "युग्मित उपयोगकर्ता",
     "CL_CF_CS_atw_cs_2": "मेनू सूची में प्रवेश करने के लिए मेनू बटन दबाएँ।",
     "CL_CF_CS_atw_cs_3": "WIFI चुनें, फिर WIFI कॉन्फ़िगरेशन शुरू करने के लिए बीच वाला बटन दबाएँ। अब WLAN सिंबल चमकने लगेगा।",
-    "CL_CF_CM_sun_rain_atw_name": "एटीडब्लू हीट पंप"
+    "CL_CF_CM_sun_rain_atw_name": "एटीडब्लू हीट पंप",
+    "CL_DV_OV_continue_keep_warm_desc": "अपने भोजन को गर्म रखने के लिए अतिरिक्त समय जोड़ें।",
+    "CL_DV_OV_continue_fast_cool_desc": "ओवन को जितनी जल्दी हो सके ठंडा कर लें।",
+    "CL_DV_OV_continue_reduces_desc": "खाना पकाने के बाद बची हुई नमी को कम करता है।",
+    "CL_DV_OV_go_to_extra": "अतिरिक्त पर जाएँ",
+    "CL_SL_CM_visualization": "VISUALIZATION",
+    "CL_SL_CM_laundry_usage_report": "कपड़े धोने की उपयोग रिपोर्ट",
+    "CL_SL_CM_usage_month": "महीने का उपयोग",
+    "CL_SL_CM_about_usage_month": "महीने के उपयोग के बारे में",
+    "CL_SL_CM_about_usage_month_detail": "दिखाए गए आंकड़े अनुमान हैं, सटीक माप नहीं। हमारे अनुमान नियंत्रित परीक्षणों पर आधारित हैं, इसलिए आपके वास्तविक परिणाम भिन्न हो सकते हैं। वास्तविक दुनिया में ऊर्जा का उपयोग आपके विशिष्ट वातावरण और आदतों पर निर्भर करता है।",
+    "CL_SL_CM_drum_cleaning_title": "ड्रम की सफाई",
+    "CL_SL_CM_drum_cleaning_great_job": "वॉशर ड्रम साफ है और आपने बहुत अच्छा काम किया!",
+    "CL_SL_CM_drum_cleaning_warning": "पिछली बार ड्रम की सफाई के बाद से इसे कई बार धोया गया है, और कपड़े धोने को साफ करने के लिए इसका उपयोग करने की सिफारिश की जाती है।",
+    "CL_SL_CM_drum_cleaning_about": "ड्रम की सफाई के बारे में",
+    "CL_SL_CM_drum_cleaning_about_detail": "वॉशिंग मशीन ड्रम क्लीन फंक्शन एक स्व-सफाई चक्र है जिसे मोल्ड या अन्य बैक्टीरिया को हटाने के लिए डिज़ाइन किया गया है जो सामान्य उपयोग के माध्यम से ड्रम के अंदर जमा हो सकते हैं। हम अनुशंसा करते हैं कि आप 30 कपड़े धोने के चक्रों के बाद ड्रम की सफाई करें।",
+    "CL_SL_CM_data_statistics": "डेटा सांख्यिकी",
+    "CL_SL_CM_data_statistics_about": "डेटा सांख्यिकी के बारे में",
+    "CL_SL_CM_data_statistics_about_detail": "\"अन्य\" कम इस्तेमाल किए जाने वाले शब्दों का योग है।",
+    "CL_SL_CM_usage_week_about": "सप्ताह के उपयोग के बारे में",
+    "CL_SL_CM_usage_month_about": "महीने के उपयोग के बारे में",
+    "CL_SL_CM_usage_year_about": "वर्ष के उपयोग के बारे में",
+    "CL_SL_CM_washing_temperature": "धुलाई का तापमान",
+    "CL_SL_CM_washing_temperature_detail": "सांख्यिकीय रूप से कम तापमान अधिक ऊर्जा कुशल होता है, इसलिए अगली बार आप कम तापमान वाला पानी आज़माना चाहेंगे।",
+    "add_appliance_connect_wifi_atos": "अपने स्मार्टफोन की वाई-फाई सेटिंग में \"कनेक्टलाइफ\" नेटवर्क से कनेक्ट करें।\n\nकनेक्टलाइफ ऐप से बाहर निकलें और अपने स्मार्टफोन की वाईफाई सेटिंग में जाएं। \"कनेक्टलाइफ\" नेटवर्क से कनेक्ट करें, \"कनेक्टलाइफ\" पासवर्ड टाइप करें और ऐप पर वापस लौटें।",
+    "after_sale_report_failed_desc_new": "एक अप्रत्याशित त्रुटि घटित हुई और समस्या की रिपोर्ट नहीं की जा सकी."
 }
