--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4387,5 +4387,29 @@
     "CL_CF_CM_Paired_users": "페어링된 사용자",
     "CL_CF_CS_atw_cs_2": "메뉴 버튼을 눌러 메뉴 목록으로 들어가세요.",
     "CL_CF_CS_atw_cs_3": "WIFI를 선택한 다음 가운데 버튼을 눌러 WIFI 구성을 시작합니다. 이제 WLAN 심볼이 깜박이기 시작합니다.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW 히트 펌프"
+    "CL_CF_CM_sun_rain_atw_name": "ATW 히트 펌프",
+    "CL_DV_OV_continue_keep_warm_desc": "음식을 따뜻하게 유지하려면 시간을 더 추가하세요.",
+    "CL_DV_OV_continue_fast_cool_desc": "가능한 한 빨리 오븐을 식히세요.",
+    "CL_DV_OV_continue_reduces_desc": "요리 후 남아 있는 수분을 줄여줍니다.",
+    "CL_DV_OV_go_to_extra": "추가 기능으로 이동",
+    "CL_SL_CM_visualization": "심상",
+    "CL_SL_CM_laundry_usage_report": "세탁물 사용 보고서",
+    "CL_SL_CM_usage_month": "이번 달의 사용량",
+    "CL_SL_CM_about_usage_month": "이번달 사용량에 대하여",
+    "CL_SL_CM_about_usage_month_detail": "표시된 데이터는 정확한 측정치가 아닌 추정치입니다. 추정치는 통제된 테스트를 기반으로 하므로 실제 결과는 다를 수 있습니다. 실제 에너지 사용량은 사용자의 특정 환경과 습관에 따라 달라집니다.",
+    "CL_SL_CM_drum_cleaning_title": "드럼 세척",
+    "CL_SL_CM_drum_cleaning_great_job": "세탁기 드럼이 깨끗하고 정말 좋은 일을 하셨네요!",
+    "CL_SL_CM_drum_cleaning_warning": "마지막으로 드럼을 청소한 이후 여러 번 세탁을 했으며, 세탁물을 더 깨끗하게 만들기 위해 사용하는 것이 좋습니다.",
+    "CL_SL_CM_drum_cleaning_about": "드럼 청소에 대하여",
+    "CL_SL_CM_drum_cleaning_about_detail": "세탁기 드럼 세척 기능은 일반적인 사용으로 인해 드럼 내부에 쌓일 수 있는 곰팡이나 기타 박테리아를 제거하기 위해 고안된 자체 세척 주기입니다. 세탁 주기를 30회 반복한 후에는 드럼 세척을 하는 것이 좋습니다.",
+    "CL_SL_CM_data_statistics": "데이터 통계",
+    "CL_SL_CM_data_statistics_about": "데이터 통계에 대하여",
+    "CL_SL_CM_data_statistics_about_detail": "'기타'는 덜 사용되는 것들의 합계입니다.",
+    "CL_SL_CM_usage_week_about": "이번주 사용에 대하여",
+    "CL_SL_CM_usage_month_about": "이번달 사용량에 대하여",
+    "CL_SL_CM_usage_year_about": "올해의 사용에 대하여",
+    "CL_SL_CM_washing_temperature": "세탁 온도",
+    "CL_SL_CM_washing_temperature_detail": "통계적으로 보면 온도가 낮을수록 에너지 효율이 더 높으므로 다음에는 더 낮은 물 온도를 시도해 보는 것이 좋습니다.",
+    "add_appliance_connect_wifi_atos": "스마트폰의 Wi-Fi 설정에서 \"ConnectLife\" 네트워크에 연결합니다.\n\nConnectLife 앱을 종료하고 스마트폰의 Wi-Fi 설정으로 이동합니다. \"ConnectLife\" 네트워크에 연결하고 암호 \"ConnectLife\"를 입력한 다음 앱으로 돌아갑니다.",
+    "after_sale_report_failed_desc_new": "예상치 못한 오류가 발생하여 문제를 보고할 수 없습니다."
 }
