--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4387,5 +4387,29 @@
     "CL_CF_CM_Paired_users": "sparowani użytkownicy",
     "CL_CF_CS_atw_cs_2": "Naciśnij przycisk Menu, aby wejść do listy menu.",
     "CL_CF_CS_atw_cs_3": "Wybierz WIFI, a następnie naciśnij środkowy przycisk, aby rozpocząć konfigurację WIFI. Symbol WLAN zacznie teraz migać.",
-    "CL_CF_CM_sun_rain_atw_name": "Pompa ciepła ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Pompa ciepła ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Pozostaw jedzenie na dłużej, aby utrzymać je w cieple.",
+    "CL_DV_OV_continue_fast_cool_desc": "Wystudź piekarnik tak szybko, jak to możliwe.",
+    "CL_DV_OV_continue_reduces_desc": "Zmniejsza ilość wilgoci pozostałej po gotowaniu.",
+    "CL_DV_OV_go_to_extra": "Przejdź do dodatków",
+    "CL_SL_CM_visualization": "Wyobrażanie sobie",
+    "CL_SL_CM_laundry_usage_report": "Raport o użytkowaniu pralni",
+    "CL_SL_CM_usage_month": "Wykorzystanie miesiąca",
+    "CL_SL_CM_about_usage_month": "O wykorzystaniu miesiąca",
+    "CL_SL_CM_about_usage_month_detail": "Przedstawione dane mają charakter szacunkowy, a nie dokładnych pomiarów. Nasze szacunki opierają się na kontrolowanych testach, więc rzeczywiste wyniki mogą być inne. Rzeczywiste zużycie energii zależy od konkretnego środowiska i nawyków.",
+    "CL_SL_CM_drum_cleaning_title": "Czyszczenie bębna",
+    "CL_SL_CM_drum_cleaning_great_job": "Bęben pralki jest czysty, świetnie sobie poradziłeś!",
+    "CL_SL_CM_drum_cleaning_warning": "Od ostatniego czyszczenia bębna prano go wiele razy, dlatego zaleca się jego użycie w celu uzyskania środka czyszczącego do prania.",
+    "CL_SL_CM_drum_cleaning_about": "O czyszczeniu bębna",
+    "CL_SL_CM_drum_cleaning_about_detail": "Funkcja czyszczenia bębna pralki to cykl samoczyszczenia, którego celem jest usunięcie pleśni i innych bakterii, które mogły nagromadzić się wewnątrz bębna podczas normalnego użytkowania. Zalecamy czyszczenie bębna po 30 cyklach prania.",
+    "CL_SL_CM_data_statistics": "Statystyki danych",
+    "CL_SL_CM_data_statistics_about": "O statystykach danych",
+    "CL_SL_CM_data_statistics_about_detail": "„Inne” to suma tych rzadziej używanych.",
+    "CL_SL_CM_usage_week_about": "O wykorzystaniu tygodnia",
+    "CL_SL_CM_usage_month_about": "O wykorzystaniu miesiąca",
+    "CL_SL_CM_usage_year_about": "O użytkowaniu roku",
+    "CL_SL_CM_washing_temperature": "Temperatura prania",
+    "CL_SL_CM_washing_temperature_detail": "Statystycznie rzecz biorąc, niższe temperatury oznaczają większą oszczędność energii, więc następnym razem możesz spróbować ustawić niższą temperaturę wody.",
+    "add_appliance_connect_wifi_atos": "Połącz się z siecią „ConnectLife” w ustawieniach Wi-Fi swojego smartfona.\n\nWyjdź z aplikacji ConnectLife i przejdź do ustawień Wi-Fi smartfona. Połącz się z siecią „ConnectLife”, wpisz hasło „ConnectLife” i wróć do aplikacji.",
+    "after_sale_report_failed_desc_new": "Wystąpił nieoczekiwany błąd i nie można było zgłosić problemu."
 }
