--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -3825,7 +3825,7 @@
     "gorenje_wm_ads_kids": "Otroci",
     "gorenje_wm_ads_swimwear": "Kopalke",
     "gorenje_wm_ads_waterproof_clothing": "Nepremočljiva oblačila",
-    "gorenje_wm_ads_tights_stocking_leggings": "Hlačne nogavice/nogavice/pajkice",
+    "gorenje_wm_ads_tights_stocking_leggings": "Hlačne nogavice/pajkice",
     "gorenje_wm_ads_underwear": "Spodnje perilo",
     "gorenje_wm_ads_kitchen_program": "Kuhinjski program",
     "gorenje_wm_ads_whitening": "Beljenje",
@@ -4387,5 +4387,29 @@
     "CL_CF_CM_Paired_users": "seznanjeni uporabniki",
     "CL_CF_CS_atw_cs_2": "Pritisnite gumb Meni, da odprete seznam menijev.",
     "CL_CF_CS_atw_cs_3": "Izberite WIFI, nato pritisnite srednji gumb, da začnete konfiguracijo WIFI. Simbol WLAN bo zdaj začel utripati.",
-    "CL_CF_CM_sun_rain_atw_name": "Toplotna črpalka ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Toplotna črpalka ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Dodajte dodaten čas, da bo hrana ostala topla.",
+    "CL_DV_OV_continue_fast_cool_desc": "Pečico čim hitreje ohladite.",
+    "CL_DV_OV_continue_reduces_desc": "Zmanjša preostalo vlago po kuhanju.",
+    "CL_DV_OV_go_to_extra": "Pojdi na dodatke",
+    "CL_SL_CM_visualization": "Vizualizacija",
+    "CL_SL_CM_laundry_usage_report": "Poročilo o uporabi perila",
+    "CL_SL_CM_usage_month": "Uporaba meseca",
+    "CL_SL_CM_about_usage_month": "O porabi meseca",
+    "CL_SL_CM_about_usage_month_detail": "Prikazani podatki so ocene, ne natančne meritve. Naše ocene temeljijo na nadzorovanih testih, zato se lahko vaši dejanski rezultati razlikujejo. Realna poraba energije je odvisna od vašega posebnega okolja in navad.",
+    "CL_SL_CM_drum_cleaning_title": "Čiščenje bobna",
+    "CL_SL_CM_drum_cleaning_great_job": "Boben pralnega stroja je čist in opravili ste odlično delo!",
+    "CL_SL_CM_drum_cleaning_warning": "Od zadnjega čiščenja bobna je bil večkrat opran, zato je priporočljivo, da ga uporabite za čistejše perilo.",
+    "CL_SL_CM_drum_cleaning_about": "O čiščenju bobna",
+    "CL_SL_CM_drum_cleaning_about_detail": "Funkcija čiščenja bobna pralnega stroja je samočistilni cikel, namenjen odstranjevanju plesni ali drugih bakterij, ki so se verjetno nabrale v bobnu med splošno uporabo. Priporočamo, da očistite boben po 30 ciklih pranja perila.",
+    "CL_SL_CM_data_statistics": "Podatkovna statistika",
+    "CL_SL_CM_data_statistics_about": "O statistiki podatkov",
+    "CL_SL_CM_data_statistics_about_detail": "»Drugo« je vsota manj rabljenih.",
+    "CL_SL_CM_usage_week_about": "O porabi tedna",
+    "CL_SL_CM_usage_month_about": "O porabi meseca",
+    "CL_SL_CM_usage_year_about": "O uporabi leta",
+    "CL_SL_CM_washing_temperature": "Temperatura pranja",
+    "CL_SL_CM_washing_temperature_detail": "Nižje temperature so statistično bolj energetsko učinkovite, zato boste naslednjič morda želeli poskusiti z nižjo temperaturo vode.",
+    "add_appliance_connect_wifi_atos": "Povežite se z omrežjem »ConnectLife« v nastavitvah Wi-Fi vašega pametnega telefona.\n\nZaprite aplikacijo ConnectLife in pojdite na nastavitve Wi-Fi vašega pametnega telefona. Povežite se z omrežjem »ConnectLife«, vnesite geslo »ConnectLife« in se vrnite v aplikacijo.",
+    "after_sale_report_failed_desc_new": "Prišlo je do nepričakovane napake in težave ni bilo mogoče prijaviti."
 }
