--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4387,5 +4387,29 @@
     "CL_CF_CM_Paired_users": "parade användare",
     "CL_CF_CS_atw_cs_2": "Tryck på Meny-knappen för att öppna menylistan.",
     "CL_CF_CS_atw_cs_3": "Välj WIFI och tryck sedan på mittknappen för att starta WIFI-konfigurationen. WLAN-symbolen börjar nu blinka.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW värmepump"
+    "CL_CF_CM_sun_rain_atw_name": "ATW värmepump",
+    "CL_DV_OV_continue_keep_warm_desc": "Lägg till ytterligare tid för att hålla din mat varm.",
+    "CL_DV_OV_continue_fast_cool_desc": "Kyl ner ugnen så fort som möjligt.",
+    "CL_DV_OV_continue_reduces_desc": "Minskar kvarvarande fukt efter tillagning.",
+    "CL_DV_OV_go_to_extra": "Gå till extra",
+    "CL_SL_CM_visualization": "Visualisering",
+    "CL_SL_CM_laundry_usage_report": "Tvättanvändningsrapport",
+    "CL_SL_CM_usage_month": "Månadens användning",
+    "CL_SL_CM_about_usage_month": "Om månadens användning",
+    "CL_SL_CM_about_usage_month_detail": "De data som visas är uppskattningar, inte exakta mätningar. Våra uppskattningar är baserade på kontrollerade tester, så dina faktiska resultat kan variera. Den verkliga energianvändningen beror på din specifika miljö och dina vanor.",
+    "CL_SL_CM_drum_cleaning_title": "trumrengöring",
+    "CL_SL_CM_drum_cleaning_great_job": "Tvätttrumman är ren och du gjorde ett bra jobb!",
+    "CL_SL_CM_drum_cleaning_warning": "Den har tvättats många gånger sedan den senaste trumrengöringen, och det rekommenderas att använda den för att göra tvätten renare.",
+    "CL_SL_CM_drum_cleaning_about": "Om trumrengöring",
+    "CL_SL_CM_drum_cleaning_about_detail": "En tvättmaskins trumrengöringsfunktion är en självrengörande cykel utformad för att ta bort mögel eller andra bakterier som sannolikt har byggts upp inuti trumman genom allmän användning. Vi rekommenderar att du gör en trumrengöring efter 30 tvättcykler.",
+    "CL_SL_CM_data_statistics": "Datastatistik",
+    "CL_SL_CM_data_statistics_about": "Om datastatistik",
+    "CL_SL_CM_data_statistics_about_detail": "\"Andra\" är summan av mindre använda.",
+    "CL_SL_CM_usage_week_about": "Om veckans användning",
+    "CL_SL_CM_usage_month_about": "Om månadens användning",
+    "CL_SL_CM_usage_year_about": "Om årets användning",
+    "CL_SL_CM_washing_temperature": "Tvätttemperatur",
+    "CL_SL_CM_washing_temperature_detail": "Lägre temperaturer är statistiskt sett mer energieffektiva, så du kanske vill prova en lägre vattentemperatur nästa gång.",
+    "add_appliance_connect_wifi_atos": "Anslut till nätverket \"ConnectLife\" i din smartphones Wi-Fi-inställningar.\n\nAvsluta ConnectLife-appen och gå till din smartphones Wi-Fi-inställningar. Anslut till nätverket \"ConnectLife\", skriv in lösenordet \"ConnectLife\" och återgå till appen.",
+    "after_sale_report_failed_desc_new": "Ett oväntat fel uppstod och problemet kunde inte rapporteras."
 }
