--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4387,5 +4387,29 @@
     "CL_CF_CM_Paired_users": "ผู้ใช้ที่จับคู่",
     "CL_CF_CS_atw_cs_2": "กดปุ่ม Menu เพื่อเข้าสู่รายการเมนู",
     "CL_CF_CS_atw_cs_3": "เลือก WIFI จากนั้นกดปุ่มตรงกลางเพื่อเริ่มกำหนดค่า WIFI สัญลักษณ์ WLAN จะเริ่มกะพริบ",
-    "CL_CF_CM_sun_rain_atw_name": "ปั๊มความร้อน ATW"
+    "CL_CF_CM_sun_rain_atw_name": "ปั๊มความร้อน ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "เพิ่มเวลาเพิ่มเติมในการเก็บอาหารของคุณให้อุ่น",
+    "CL_DV_OV_continue_fast_cool_desc": "ทำให้เตาอบเย็นลงโดยเร็วที่สุด",
+    "CL_DV_OV_continue_reduces_desc": "ลดความชื้นที่เหลืออยู่หลังการปรุงอาหาร",
+    "CL_DV_OV_go_to_extra": "ไปที่ส่วนเสริม",
+    "CL_SL_CM_visualization": "การสร้างภาพ",
+    "CL_SL_CM_laundry_usage_report": "รายงานการใช้ผ้าซัก",
+    "CL_SL_CM_usage_month": "การใช้ของเดือน",
+    "CL_SL_CM_about_usage_month": "เกี่ยวกับการใช้ของเดือน",
+    "CL_SL_CM_about_usage_month_detail": "ข้อมูลที่แสดงนั้นเป็นค่าประมาณ ไม่ใช่การวัดที่แน่นอน การประมาณของเราขึ้นอยู่กับการทดสอบที่มีการควบคุม ดังนั้นผลลัพธ์จริงของคุณอาจแตกต่างกันไป การใช้พลังงานในโลกแห่งความเป็นจริงขึ้นอยู่กับสภาพแวดล้อมและนิสัยเฉพาะของคุณ",
+    "CL_SL_CM_drum_cleaning_title": "การทำความสะอาดกลอง",
+    "CL_SL_CM_drum_cleaning_great_job": "ถังซักสะอาด และคุณทำได้ดีมาก!",
+    "CL_SL_CM_drum_cleaning_warning": "ได้รับการซักไปหลายครั้งนับตั้งแต่การทำความสะอาดถังครั้งสุดท้าย และแนะนำให้ใช้เพื่อทำให้เครื่องซักผ้าสะอาดขึ้น",
+    "CL_SL_CM_drum_cleaning_about": "เกี่ยวกับการทำความสะอาดกลอง",
+    "CL_SL_CM_drum_cleaning_about_detail": "ฟังก์ชันทำความสะอาดถังซักของเครื่องซักผ้าเป็นรอบการทำความสะอาดตัวเองที่ออกแบบมาเพื่อขจัดเชื้อราหรือแบคทีเรียอื่นๆ ที่อาจสะสมอยู่ภายในถังซักจากการใช้งานทั่วไป เราขอแนะนำให้คุณทำความสะอาดถังซักหลังจากซักผ้าไปแล้ว 30 รอบ",
+    "CL_SL_CM_data_statistics": "สถิติข้อมูล",
+    "CL_SL_CM_data_statistics_about": "เกี่ยวกับสถิติข้อมูล",
+    "CL_SL_CM_data_statistics_about_detail": "“อื่นๆ” คือผลรวมของสิ่งที่ใช้กันน้อยกว่า",
+    "CL_SL_CM_usage_week_about": "เกี่ยวกับการใช้งานประจำสัปดาห์",
+    "CL_SL_CM_usage_month_about": "เกี่ยวกับการใช้ของเดือน",
+    "CL_SL_CM_usage_year_about": "เกี่ยวกับการใช้งานของปี",
+    "CL_SL_CM_washing_temperature": "อุณหภูมิในการซัก",
+    "CL_SL_CM_washing_temperature_detail": "ตามสถิติแล้วอุณหภูมิที่ต่ำกว่าจะมีประสิทธิภาพในการประหยัดพลังงานมากกว่า ดังนั้น คุณอาจลองใช้อุณหภูมิน้ำที่ต่ำกว่าในครั้งต่อไปก็ได้",
+    "add_appliance_connect_wifi_atos": "เชื่อมต่อกับเครือข่าย “ConnectLife” ในการตั้งค่า Wi-Fi ของสมาร์ทโฟน\n\nออกจากแอป ConnectLife แล้วไปที่การตั้งค่า Wi-Fi ของสมาร์ทโฟน เชื่อมต่อกับเครือข่าย “ConnectLife” พิมพ์รหัสผ่าน “ConnectLife” แล้วกลับไปที่แอป",
+    "after_sale_report_failed_desc_new": "เกิดข้อผิดพลาดที่ไม่คาดคิดและไม่สามารถรายงานปัญหาได้"
 }
